--- a/onlineJudge/index.html
+++ b/onlineJudge/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>web</title>
+    <title>SuperNova国际教育</title>
   </head>
-  <body>
+  <body style="margin: 0;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
