--- a/UBWebsite/index.html
+++ b/UBWebsite/index.html
@@ -25,7 +25,8 @@
         <!--================Header Menu Area =================-->
         <header class="main_menu_area">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+                <!-- <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a> -->
+                <a class="navbar-brand" href="#">SuperNova国际教育</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span></span>
                     <span></span>
@@ -36,8 +37,8 @@
                     <ul class="navbar-nav">
                         <li class="nav-item active"><a class="nav-link" href="index.html">首页</a></li>
                         <li class="nav-item"><a class="nav-link" href="about-us.html">关于我们</a></li>
-                        <li class="nav-item"><a class="nav-link" href="service.html">课程内容</a></li>
-                        
+                        <li class="nav-item"><a class="nav-link" href="service.html">service</a></li>
+                        <li class="nav-item"><a class="nav-link" href="portfolio.html">portfolio</a></li>
                         <li class="nav-item dropdown submenu">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             课程内容
@@ -49,8 +50,6 @@
                                 <li class="nav-item"><a class="nav-link" href="">其他</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="portfolio.html">联系我们</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">联系我们</a></li>
                     </ul>
                 </div>
             </nav>
@@ -228,7 +227,7 @@
             <div class="container">
                 <div class="row get_touch_inner">
                     <div class="col-lg-6">
-                        <form class="contact_us_form row" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+                        <form class="contact_us_form row" method="post" id="contactForm" novalidate="novalidate">
                             <div class="form-group col-lg-6">
                                 <input type="text" class="form-control" id="name" name="name" placeholder="称呼">
                             </div>
