--- a/UBWebsite/single-blog.html
+++ b/UBWebsite/single-blog.html
@@ -140,7 +140,7 @@
                             </div>
                             <div class="blog_comment_form">
                                 <h3>Leave a comment</h3>
-                                <form class="row contact_us_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+                                <form class="row contact_us_form" method="post" id="contactForm" novalidate="novalidate">
                                     <div class="form-group col-sm-6">
                                         <input type="text" class="form-control" id="name" name="name" placeholder="Name">
                                     </div>
