--- a/UBWebsite/index.html
+++ b/UBWebsite/index.html
@@ -61,9 +61,13 @@
         <section class="banner_area">
             <div class="container">
                 <div class="banner_inner_text">
-                    <h2>Choose a powerful <br />design for your Start-up</h2>
-                    <p> Your Best Choice !</p>
-                    <a class="more_btn" style="margin-top: 40px;" href="#contact">立即开始</a>
+                    <h4> Your Best Choice !</h4>
+                    <h3>国际课程辅导</h3>
+                    <h4>专业名师在线辅导，足不出户即可上课</h4>
+                    <h4>一对一因材施教，量身定制课程内容</h4>
+                    <h4>学费低至288/小时，超高性价比</h4>
+                    <h4>试听不满意退全款，了解有保障</h4>
+                    <a class="more_btn" style="margin-top: 40px;" href="#contact">立即开课</a>
                 </div>
             </div>
         </section>
