--- a/UBWebsite/index.html
+++ b/UBWebsite/index.html
@@ -78,8 +78,8 @@
             <div class="container">
                 <div class="c_title">
                     <img src="img/icon/title-icon.png" alt="">
-                    <h6>Discover the features</h6>
-                    <h2>We are young but bold</h2>
+                    <h6>多名优秀学员强烈推荐</h6>
+                    <h2>教育质量有口皆碑</h2>
                 </div>
                 <div class="row feature_inner">
                     <div class="col-lg-4 col-sm-6">
@@ -162,7 +162,7 @@
                         <div class="l_title">
                             <img src="img/icon/title-icon.png" alt="">
                             <h6>Discover the features</h6>
-                            <h2>We don’t hide, we stand tall in front of chalenge</h2>
+                            <h2>We don’t hide, we stand tall in front of challenge</h2>
                         </div>
                         <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul.Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum. Nam convallis vel erat id dictum. Sed ut risus in orci convallis viverra a eget nisi. Aenean pellentesque elit vitae eros dignissim ultrices. </p>
                     </div>
@@ -253,8 +253,8 @@
                         <div class="touch_details">
                             <div class="l_title">
                                 <img src="img/icon/title-icon.png" alt="">
-                                <h6>详情咨询</h6>
-                                <h2>请留下您的联系方式</h2>
+                                <h6>请留下您的联系方式</h6>
+                                <h2>详情咨询</h2>
                             </div>
                             <p>请留下方便的联系方式，客服会在<label style="color: #fa6c67; font-size: 28px;">12h</label>内联系您交流课程详情。</p>
                             <p>试听后不满意立即退款 ！</p>
