--- a/UBWebsite/index.html
+++ b/UBWebsite/index.html
@@ -25,8 +25,7 @@
         <!--================Header Menu Area =================-->
         <header class="main_menu_area">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <!-- <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a> -->
-                <a class="navbar-brand" href="#">SuperNova国际教育</a>
+                <img src="img/logo.png" alt="" class="navbar-img">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span></span>
                     <span></span>
@@ -44,10 +43,11 @@
                             课程内容
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                                <li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
-                                <li class="nav-item"><a class="nav-link" href="">其他</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog.html">IGCSE课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="single-blog.html">Alevel课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="elements.html">IB课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="">AP课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="">国际竞赛课程</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -274,7 +274,7 @@
                     <div class="row footer_widget_inner">
                         <div class="col-lg-4 col-sm-6">
                             <aside class="f_widget f_about_widget">
-                                <img src="img/footer-logo.png" alt="">
+                                <img src="img/logo.png" alt="" class="navbar-img">
                                 <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
                             </aside>
                         </div>
