--- a/UBWebsite/portfolio.html
+++ b/UBWebsite/portfolio.html
@@ -25,8 +25,7 @@
         <!--================Header Menu Area =================-->
         <header class="main_menu_area">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <!-- <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a> -->
-                <a class="navbar-brand" href="#">SuperNova国际教育</a>
+                <img src="img/logo.png" alt="" class="navbar-img">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span></span>
                     <span></span>
