--- a/UBWebsite/blog.html
+++ b/UBWebsite/blog.html
@@ -34,18 +34,21 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
-                        <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-                        <li class="nav-item dropdown submenu active">
+                        <li class="nav-item"><a class="nav-link" href="index.html">首页</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about-us.html">关于我们</a></li>
+                        <li class="nav-item"><a class="nav-link" href="portfolio.html">portfolio</a></li>
+                        <li class="nav-item active dropdown submenu">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Blog
+                            课程内容
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                                <li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog.html">IGCSE课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="single-blog.html">Alevel课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="elements.html">IB课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="">AP课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="">SAT 课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="">国际竞赛课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="">小语种语言培训</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -224,37 +227,41 @@
                     <div class="row footer_widget_inner">
                         <div class="col-lg-4 col-sm-6">
                             <aside class="f_widget f_about_widget">
-                                <img src="img/footer-logo.png" alt="">
-                                <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
+                                <img src="img/logo.png" alt="" class="navbar-img">
+                                <p>主营课程</p>
+                                <ul>
+                                    <li><a class="foot-link" href="blog.html">IGCSE课程</a></li>
+                                    <li><a class="foot-link" href="single-blog.html">Alevel课程</a></li>
+                                    <li><a class="foot-link" href="elements.html">IB课程</a></li>
+                                    <li><a class="foot-link" href="">AP课程</a></li>
+                                    <li><a class="foot-link" href="">SAT 课程</a></li>
+                                    <li><a class="foot-link" href="">国际竞赛课程</a></li>
+                                    <li><a class="foot-link" href="">小语种语言培训</a></li>
+                                </ul>
                             </aside>
                         </div>
                         <div class="col-lg-4 col-sm-6">
                             <aside class="f_widget f_insta_widget">
                                 <div class="f_title">
-                                    <h3>Instagram</h3>
+                                    <h3>SuperNova国际教育 微信客服号</h3>
+                                    <h3>SuperNovaEdu</h3>
                                 </div>
-                                <ul>
-                                    <li><a href="#"><img src="img/instagram/ins-1.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-2.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-3.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-4.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-5.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-6.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-7.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-8.jpg" alt=""></a></li>
-                                </ul>
+                                <div class="f_contain">
+                                    周一至周日：24小时在线回复课程咨询及试听问题，处理建议和投诉问题。<br/>
+                                    <img src="img/wechat.png"/>
+                                </div>
+                                
                             </aside>
                         </div>
                         <div class="col-lg-4 col-sm-6">
                             <aside class="f_widget f_subs_widget">
                                 <div class="f_title">
-                                    <h3>Subscribe to newsletter</h3>
+                                    <h3>加入我们</h3>
+                                    <h3>SuperNovaEdu</h3>
                                 </div>
-                                <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Your e-mail address here" aria-label="Your e-mail address here">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-secondary submit_btn" type="button">Subscribe</button>
-                                    </span>
+                                <div class="f_contain">
+                                    请添加微信客服号并发送您的简历。<br />
+                                    我们诚聘有志于从事留学教育工作的优秀的您。
                                 </div>
                             </aside>
                         </div>
@@ -264,19 +271,12 @@
             <div class="footer_copyright">
                 <div class="container">
                     <div class="float-sm-left">
-                        <h5><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></h5>
+                        <h5><script>document.write(new Date().getFullYear());</script> UniverseBeyond国际教育 &copy; All rights reserved</h5>
                     </div>
                     <div class="float-sm-right">
-                        <ul>
-                            <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
+                        <h5>ICP 备案: 
+                            //todo
+                        </h5>
                     </div>
                 </div>
             </div>
