--- a/UBWebsite/about-us.html
+++ b/UBWebsite/about-us.html
@@ -35,7 +35,6 @@
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="index.html">首页</a></li>
                         <li class="nav-item active"><a class="nav-link" href="about-us.html">关于我们</a></li>
-                        <li class="nav-item"><a class="nav-link" href="portfolio.html">portfolio</a></li>
                         <li class="nav-item dropdown submenu">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             课程内容
@@ -138,60 +137,60 @@
                 <div class="testimonials_slider owl-carousel">
                     <div class="item">
                         <div class="testi_item">
-                            <h3>“Simply professionals”</h3>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
+                            <h3>“兴趣是最好的老师”</h3>
+                            <p>Kevin是SN国际教育数学物理竞赛金牌教练，曾获得全国⾼中⽣数学，物理竞赛一等奖，美国⼤学⽣数学建模国际⼀等奖获得者，中国大学生数学竞赛第一等奖，本科毕业于中科大，博士就读于QS世界大学排名前30 的香港大学，上课幽默风趣，循循善诱，深受学生们喜欢。</p>
                             <div class="media">
-                                <div class="d-flex">
-                                    <img class="rounded-circle" src="img/testimonials/testi-1.jpg" alt="">
-                                </div>
                                 <div class="media-body">
-                                    <h4>Maria Smith</h4>
-                                    <h5>CEO Enterprise</h5>
+                                    <h4>Kevin</h4>
+                                    <h5>Math Teacher</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="testi_item">
-                            <h3>“They are the best”</h3>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
+                            <h3>“教学贴近生活”</h3>
+                            <p>Eli是SN国际教育计算机冲分金牌教师，曾获得ACM/ICPC区预赛银奖，有阿里巴巴，微软等国内外顶级互联网公司实习经历。本科毕业于南京大学，博士就读于世界排名前10的哥伦比亚大学。善于用生活中的例子解释复杂的计算机原理，让学生在贴近生活的教学氛围中掌握知识。曾带领30多位学生冲A成功。</p>
                             <div class="media">
-                                <div class="d-flex">
-                                    <img class="rounded-circle" src="img/testimonials/testi-2.jpg" alt="">
-                                </div>
                                 <div class="media-body">
-                                    <h4>Chriss Turner</h4>
-                                    <h5>CEO Enterprise</h5>
+                                    <h4>Eli</h4>
+                                    <h5>Computer Teacher</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="testi_item">
-                            <h3>“We just love them”</h3>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
+                            <h3>“毫无保留分享经验”</h3>
+                            <p>Smith是SN国际教育物理金牌教师；浙江大学物理系phd；曾在’ADVANCED MATERIALS’发表过学术论文，先后访问过新加坡国立大学，美国加利福尼亚大学等世界名校。教学方面老师幽默风趣，能让枯燥的物理学习变得活泼生动，极大提高学生物理学习兴趣。</p>
                             <div class="media">
-                                <div class="d-flex">
-                                    <img class="rounded-circle" src="img/testimonials/testi-3.jpg" alt="">
-                                </div>
                                 <div class="media-body">
-                                    <h4>Julie Smart</h4>
-                                    <h5>CEO Enterprise</h5>
+                                    <h4>Smith</h4>
+                                    <h5>Physics Teacher</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="testi_item">
-                            <h3>“Simply professionals”</h3>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
+                            <h3>“授课方式多样生动”</h3>
+                            <p>Sherry Xue是SN国际教育生物资深教师；本科期间作为代表参加国际顶级大学生科技赛事，并以专业第一保送北京大学生物直博。通过多年的专业知识学习和实验操作经验，不仅有着扎实的生物学基础，而且在国际期刊发表文章数篇。教学授课方式多样，善于在教学过程中了解学生不足之处，抓住重点高效的完成教学任务。</p>
                             <div class="media">
-                                <div class="d-flex">
-                                    <img class="rounded-circle" src="img/testimonials/testi-1.jpg" alt="">
-                                </div>
                                 <div class="media-body">
-                                    <h4>Maria Smith</h4>
-                                    <h5>CEO Enterprise</h5>
+                                    <h4>Sherry Xue</h4>
+                                    <h5>Biological Teacher</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testi_item">
+                            <h3>“寓教于乐”</h3>
+                            <p>Tomas是SN国际教育经济金牌教师；武汉大学经济学phd，多年来一直致力于宏观经济学研究，有着扎实的理论基础。寓教于乐，善于结合实际案例解析经济中晦涩难懂的名词，受广大学生喜爱。</p>
+                            <div class="media">
+                                <div class="media-body">
+                                    <h4>Tomas</h4>
+                                    <h5>Economics Teacher</h5>
                                 </div>
                             </div>
                         </div>
@@ -275,7 +274,27 @@
                         <div class="col-lg-4 col-sm-6">
                             <aside class="f_widget f_about_widget">
                                 <img src="img/logo.png" alt="" class="navbar-img">
-                                <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
+                            </aside>
+                        </div>
+                        <div class="col-lg-4 col-sm-6">
+                            <aside class="f_widget f_subs_widget">
+                                <div class="f_title">
+                                    <h3>加入我们</h3>
+                                    <div class="f_contain">
+                                        请添加微信客服号并发送您的简历。<br />
+                                        我们诚聘有志于从事留学教育工作的优秀的您。
+                                    </div>
+                                </div>
+                                <p>主营课程</p>
+                                <ul>
+                                    <li><a class="foot-link" href="blog.html">IGCSE课程</a></li>
+                                    <li><a class="foot-link" href="single-blog.html">Alevel课程</a></li>
+                                    <li><a class="foot-link" href="elements.html">IB课程</a></li>
+                                    <li><a class="foot-link" href="">AP课程</a></li>
+                                    <li><a class="foot-link" href="">SAT 课程</a></li>
+                                    <li><a class="foot-link" href="">国际竞赛课程</a></li>
+                                    <li><a class="foot-link" href="">小语种语言培训</a></li>
+                                </ul>
                             </aside>
                         </div>
                         <div class="col-lg-4 col-sm-6">
@@ -289,19 +308,6 @@
                                     <img src="img/wechat.png"/>
                                 </div>
                                 
-                            </aside>
-                        </div>
-                        <div class="col-lg-4 col-sm-6">
-                            <aside class="f_widget f_subs_widget">
-                                <div class="f_title">
-                                    <h3>Subscribe to newsletter</h3>
-                                </div>
-                                <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Your e-mail address here" aria-label="Your e-mail address here">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-secondary submit_btn" type="button">Subscribe</button>
-                                    </span>
-                                </div>
                             </aside>
                         </div>
                     </div>
