--- a/UBWebsite/about-us.html
+++ b/UBWebsite/about-us.html
@@ -71,16 +71,16 @@
                         <div class="challange_text_inner">
                             <div class="l_title">
                                 <!-- <img src="img/icon/title-icon.png" alt=""> -->
-                                <h6>Discover the features</h6>
-                                <h2>We don’t hide, we stand tall in front of chalenge</h2>
+                                <h6>DO OUR BEST</h6>
+                                <h2>WELCOME to SuperNova</h2>
                             </div>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul.Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum. Nam convallis vel erat id dictum. Sed ut risus in orci convallis viverra a eget nisi. Aenean pellentesque elit vitae eros dignissim ultrices. </p>
-
+                            <p>SuperNova是专业提供IGCSE、Alevel、IB、AP、SAT2等国际课程培训及国际学校入学备考的教育机构。</p>
+                            <p>作为国际课程辅导的专业机构，SN国际教育从创立开始就致力于一对一课程辅导，为每一个孩子尽力定制个性化计划，因材施教。多位学生已经被英国、美国、新加坡、加拿大、香港等各所名校录取。所有老师保证为海内外名校的硕士博士，全程对接跟踪孩子的学习过程，真正做到一对一全心全意为您的孩子叩开名校之门铺路。</p>
                         </div>
                     </div>
                     <div class="col-lg-6 challange_img">
                         <div class="challange_img_inner">
-                            <img class="img-fluid" src="img/popup-photo.jpg" alt="">
+                            <img class="img-fluid" src="img/popup-photo.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -105,16 +105,7 @@
                             <div class="circle_progress_inner">
                                 <strong></strong>
                                 <span class="percentage"></span>
-                                <h4>Creativity</h4>
-                            </div> 
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="circle_progress circular style-polygon" data-percentage="25" data-thickness="3" data-reverse="true" data-empty-fill="transparent" data-start-color="#987dff" data-end-color="#7acaff">
-                            <div class="circle_progress_inner">
-                                <strong></strong>
-                                <span class="percentage"></span>
-                                <h4>Good luck</h4>
+                                <h4>在读学生得A率</h4>
                             </div> 
                         </div>
                     </div>
@@ -123,7 +114,16 @@
                             <div class="circle_progress_inner">
                                 <strong></strong>
                                 <span class="percentage"></span>
-                                <h4>Development</h4>
+                                <h4>硕士及以上学历超95%</h4>
+                            </div> 
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <div class="circle_progress circular style-polygon" data-percentage="100" data-thickness="3" data-reverse="true" data-empty-fill="transparent" data-start-color="#987dff" data-end-color="#7acaff">
+                            <div class="circle_progress_inner">
+                                <strong></strong>
+                                <span class="percentage"></span>
+                                <h4>试听不满意100%退款</h4>
                             </div> 
                         </div>
                     </div>
