--- a/UBWebsite/index.html
+++ b/UBWebsite/index.html
@@ -144,17 +144,12 @@
                                 </div>
                                 <div class="col-lg-6 col-6">
                                     <div class="team_img_item">
-                                        <img src="img/team/people/people-2.jpg" alt="" style="width: 220px;">
+                                        <img src="img/team/people/people-2.png" alt="" style="width: 280px;">
                                     </div>
                                 </div>
-                                <div class="col-lg-6 col-6">
+                                <div class="col-lg-12">
                                     <div class="team_img_item">
-                                        <img src="img/team/people/people-3.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 col-6">
-                                    <div class="team_img_item">
-                                        <img src="img/team/people/people-4.jpg" alt="">
+                                        <img src="img/team/people/people-3.png" alt="" style="width: 500px;">
                                     </div>
                                 </div>
                             </div>
