--- a/UBWebsite/index.html
+++ b/UBWebsite/index.html
@@ -87,7 +87,7 @@
                             <div class="f_icon">
                                 <img src="img/icon/f-icon-1.png" alt="">
                             </div>
-                            <h4>Brand Identity</h4>
+                            <h4>Brand</h4>
                             <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
                         </div>
                     </div>
@@ -121,16 +121,20 @@
                         <div class="team_people_text">
                             <div class="l_title">
                                 <img src="img/icon/title-icon.png" alt="">
-                                <h6>Discover the features</h6>
-                                <h2>We build a strong team of great people</h2>
+                                <h6>因材施教</h6>
+                                <h2>我们致力于帮助每一位学员</h2>
                             </div>
-                            <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum. Nam convallis vel erat id dictum. Sed ut risus in orci convallis viverra.</p>
+                            <p>我们会通过家长的介绍了解孩子的学习情况之后，对孩子进行全面的测试评估。
+                                根据评估结果，合理有效的帮助孩子量身定做学习计划，做到细致到每个章节、每个知识点。
+                                老师会按照计划进行授课、练习以及巩固，最后会通过测试检验学生在机构学习的效率。
+                                对应孩子的成绩，给出申请建议，做到随时随地跟踪，提供孩子升学路上的一切帮助，最终叩开名校之门。</p>
                             <ul>
-                                <li><a href="#">Nunc nec maximus dui, </a></li>
-                                <li><a href="#">Aenean pellentesque elit vitae</a></li>
-                                <li><a href="#">Aenean pellentesque elit vitae</a></li>
-                                <li><a href="#">Ex mauris, ornare eget pretium </a></li>
-                                <li><a href="#">Cras ex mauris, ornare eget preti</a></li>
+                                <li>授课前全面评估</li>
+                                <li>量身定制专属课程</li>
+                                <li>细化分解考点</li>
+                                <li>课后习题巩固授课内容</li>
+                                <li>全程跟踪学习情况</li>
+                                <li>帮助变成更好的你</li>
                             </ul>
                         </div>
                     </div>
