--- a/UBWebsite/blog.html
+++ b/UBWebsite/blog.html
@@ -36,18 +36,18 @@
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="index.html">首页</a></li>
                         <li class="nav-item"><a class="nav-link" href="about-us.html">关于我们</a></li>
-                        <li class="nav-item active dropdown submenu">
+                        <li class="nav-item dropdown submenu active">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             课程内容
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="nav-item"><a class="nav-link" href="blog.html">IGCSE课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-blog.html">Alevel课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="elements.html">IB课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="">AP课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="">SAT 课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="">国际竞赛课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="">小语种语言培训</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#IGCSE">IGCSE课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#A-level">Alevel课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#IB">IB课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#AP">AP课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#SAT">SAT 课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="single-blog.html">国际竞赛课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="elements.html">小语种语言培训</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -60,8 +60,7 @@
         <section class="banner_area">
             <div class="container">
                 <div class="banner_inner_text">
-                    <h2>Blog</h2>
-                    <p>Read the news</p>
+                    <h2>课程内容介绍</h2>
                 </div>
             </div>
         </section>
@@ -70,151 +69,103 @@
         <!--================Blog Main Area =================-->
         <section class="blog_main_area p_100">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-9">
-                        <div class="blog_main_inner">
-                            <div class="blog_main_item">
-                                <div class="blog_img">
-                                    <img class="img-fluid" src="img/blog/blog-1.jpg" alt="">
-                                    <div class="blog_date">
-                                        <h4>29</h4>
-                                        <h5>October, 2017</h5>
-                                    </div>
-                                </div>
-                                <div class="blog_text">
-                                    <a href="#"><h4>Let us introduce you the best apps</h4></a>
-                                    <div class="blog_author">
-                                        <a href="#">By Lore Papp-Dinea</a>
-                                        <a href="#">Design</a>
-                                    </div>
-                                    <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
-                                    <a class="more_btn" href="#">Read More</a>
+                <div style="display: flex; justify-content: center;">
+                    <div class="blog_main_inner">
+                        <div class="blog_main_item" id="IGCSE">
+                            <div class="blog_img">
+                                <img class="img-fluid" src="img/blog/blog-1.jpg" alt="">
+                                <div class="blog_date">
+                                    <h5>IGCSE</h5>
                                 </div>
                             </div>
-                            <div class="blog_main_item">
-                                <div class="blog_img">
-                                    <img class="img-fluid" src="img/blog/blog-2.jpg" alt="">
-                                    <div class="blog_date">
-                                        <h4>29</h4>
-                                        <h5>October, 2017</h5>
-                                    </div>
+                            <div class="blog_text">
+                                <h4>IGCSE ( International General Certificate of Secondary Education )</h4>
+                                <div class="blog_author">
+                                    
                                 </div>
-                                <div class="blog_text">
-                                    <a href="#"><h4>Let us introduce you the best apps</h4></a>
-                                    <div class="blog_author">
-                                        <a href="#">By Lore Papp-Dinea</a>
-                                        <a href="#">Design</a>
-                                    </div>
-                                    <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
-                                    <a class="more_btn" href="#">Read More</a>
-                                </div>
-                            </div>
-                            <div class="blog_main_item">
-                                <div class="blog_img">
-                                    <img class="img-fluid" src="img/blog/blog-3.jpg" alt="">
-                                    <div class="blog_date">
-                                        <h4>29</h4>
-                                        <h5>October, 2017</h5>
-                                    </div>
-                                </div>
-                                <div class="blog_text">
-                                    <a href="#"><h4>Let us introduce you the best apps</h4></a>
-                                    <div class="blog_author">
-                                        <a href="#">By Lore Papp-Dinea</a>
-                                        <a href="#">Design</a>
-                                    </div>
-                                    <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
-                                    <a class="more_btn" href="#">Read More</a>
-                                </div>
+                                <p>是国外14岁至16岁全世界考试最多人数的体系之一，是CIE（Cambridge International examination）, 剑桥全球测试的一部分。其证书，只要是说英文的国家地区均会得到承认， 该考试相当于我们理解的“SSAT”，唯一不同的是：若同学想申请英国名校剑桥，牛津大学等相近英系大学，此考试成绩是申请的重要参考之一。 因中英教育体系的不同，高中的GPA成绩换算，英国无标准，不能准确了解学员的智力和学术能力，所以该考试成绩很有必要。</p>
+                                <a class="more_btn" href="#">Read More</a>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="blog_right_sidebar">
-                            <aside class="r_widget search_widget">
-                                <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Search" aria-label="Search">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-secondary" type="button"><i class="fa fa-search"></i></button>
-                                    </span>
+                        <div class="blog_main_item" id="A-level">
+                            <div class="blog_img">
+                                <img class="img-fluid" src="img/blog/blog-2.jpg" alt="">
+                                <div class="blog_date">
+                                    <h5>A-level</h5>
                                 </div>
-                            </aside>
-                            <aside class="r_widget categories_widget">
-                                <div class="r_w_title">
-                                    <h3>Categories</h3>
+                            </div>
+                            <div class="blog_text">
+                                <h4>A-level ( General Certificate of Education Advanced Level )</h4>
+                                <div class="blog_author">
                                 </div>
-                                <ul>
-                                    <li><a href="#">Vestibulum maximus</a></li>
-                                    <li><a href="#">Nisi eu lobortis pharetra</a></li>
-                                    <li><a href="#">Orci quam accumsan</a></li>
-                                    <li><a href="#">Auguen pharetra massa</a></li>
-                                    <li><a href="#">Tellus ut nulla</a></li>
-                                    <li><a href="#"> Etiam egestas viverra </a></li>
-                                </ul>
-                            </aside>
-                            <aside class="r_widget insta_widget">
-                                <div class="r_w_title">
-                                    <h3>Instagram</h3>
+                                <p>英国高中课程，是英国全民课程体系，是英国普通中等教育证书考试高级水平课程，也是英国学生的大学入学考试课程。A-Level课程证书被几乎所有英语授课的大学作为招收新生的入学标准。 在中国开设A-Level课程旨在为中国学生提供进入国外大学的有效途径，具体目标为：培养在国内初高中成绩优秀的学生进入世界顶尖大学；培养在国内初高中成绩中等的学生进入世界一流大学；培养在国内初高中成绩一般的学生考取适合自己的大学。</p>
+                                <a class="more_btn" href="#">Read More</a>
+                            </div>
+                        </div>
+                        <div class="blog_main_item" id="IB">
+                            <div class="blog_img">
+                                <img class="img-fluid" src="img/blog/blog-3.jpg" alt="">
+                                <div class="blog_date">
+                                    <h5>IB</h5>
                                 </div>
-                                <ul>
-                                    <li><a href="https://www.instagram.com/?hl=en">
-                                        <img class="img-fluid" src="img/instagram/right-instagram/r-in-1.jpg" alt="">
-                                    </a></li>
-                                    <li><a href="https://www.instagram.com/?hl=en">
-                                        <img class="img-fluid" src="img/instagram/right-instagram/r-in-2.jpg" alt="">
-                                    </a></li>
-                                    <li><a href="https://www.instagram.com/?hl=en">
-                                        <img class="img-fluid" src="img/instagram/right-instagram/r-in-3.jpg" alt="">
-                                    </a></li>
-                                    <li><a href="https://www.instagram.com/?hl=en">
-                                        <img class="img-fluid" src="img/instagram/right-instagram/r-in-4.jpg" alt="">
-                                    </a></li>
-                                    <li><a href="https://www.instagram.com/?hl=en">
-                                        <img class="img-fluid" src="img/instagram/right-instagram/r-in-5.jpg" alt="">
-                                    </a></li>
-                                    <li><a href="https://www.instagram.com/?hl=en">
-                                        <img class="img-fluid" src="img/instagram/right-instagram/r-in-6.jpg" alt="">
-                                    </a></li>
-                                </ul>
-                            </aside>
-                            <aside class="r_widget tag_widget">
-                                <div class="r_w_title">
-                                    <h3>Tags</h3>
+                            </div>
+                            <div class="blog_text">
+                                <h4>IB ( International Baccalaureate Organization )</h4>
+                                <div class="blog_author">
                                 </div>
-                                <ul>
-                                    <li><a href="#">branding</a></li>
-                                    <li><a href="#">identity</a></li>
-                                    <li><a href="#">design</a></li>
-                                    <li><a href="#">inspiration</a></li>
-                                    <li><a href="#">web design</a></li>
-                                    <li><a href="#">video</a></li>
-                                    <li><a href="#">photography</a></li>
-                                </ul>
-                            </aside>
-                            <aside class="r_widget quote_widget">
-                                <div class="r_w_title">
-                                    <h3>Quote</h3>
+                                <p>IB课程即国际文凭组织IBO（International Baccalaureate Organization），是为全球学生开设从幼儿园到大学预科的课程，为3-19岁的学生提供智力，情感，个人发展，社会技能等方面的教育，使其获得学习，工作以及生存于世的各项能力。
+                                    IBO成立于1968年，迄今为止遍布138个国家与2815个学校合作，学生数量超过77万。与A-Level、VCE、AP等课程并称全球四大高中课程体系</p>
+                                <a class="more_btn" href="#">Read More</a>
+                            </div>
+                        </div>
+                        <div class="blog_main_item" id="AP">
+                            <div class="blog_img">
+                                <img class="img-fluid" src="img/blog/blog-3.jpg" alt="">
+                                <div class="blog_date">
+                                    <h5>AP</h5>
                                 </div>
-                                <img src="img/icon/quote-icon.png" alt="">
-                                <p>Vivamus in urna eu enim porttitor consequat. Proin vitae pulvinar libero. Proin ut hendrerit metus. Aliquam erat volut pat. Donec fermen tum convallis.</p>
-                            </aside>
-                            <aside class="r_widget add_widget">
-                                <div class="r_w_title">
-                                    <h3>Add</h3>
+                            </div>
+                            <div class="blog_text">
+                                <h4>AP ( Advanced Placement )</h4>
+                                <div class="blog_author">
                                 </div>
-                                <img class="img-fluid" src="img/add.jpg" alt="">
-                            </aside>
+                                <p>AP课程是指针对AP众多的考试科目进行的授课辅导，目前以Calculus AB(微积分AB)、Calculus BC(微积分BC)、Statistics（统计学）、Physics B(物理B)、Macroeconomics（宏观经济学）、 Microeconomics（微观经济）几门课程为主。AP是Advanced Placement的缩写，中文一般翻译为美国大学先修课程或美国大学预修课程。指由美国大学理事会（The College Board）提供的在高中授课的大学课程。美国大学预修课程，指由美国大学理事会提供的在高中授课的大学课程。AP成绩已成为美国大学重要录取依据，美国大学已经普遍把学生在AP考试中的表现作为衡量其是否能够胜任大学学习的依据，因此AP考试成绩已经成为众多大学录取考虑因素中最为重要的依据之一。</p>
+                                <a class="more_btn" href="#">Read More</a>
+                            </div>
+                        </div>
+                        <div class="blog_main_item" id="SAT">
+                            <div class="blog_img">
+                                <img class="img-fluid" src="img/blog/blog-3.jpg" alt="">
+                                <div class="blog_date">
+                                    <h5>SAT</h5>
+                                </div>
+                            </div>
+                            <div class="blog_text">
+                                <h4>SAT ( Scholastic Assessment Test )</h4>
+                                <div class="blog_author">
+                                </div>
+                                <p>由美国大学委员会（College Board）主办的一场考试，其成绩是世界各国高中生申请美国大学入学资格及奖学金的重要参考，它和ACT（American College Test）都被称为美国高考。
+                                    但是此考试成绩并非所有的大学都要求提供，有些顶尖大学在入学条件上并不强制要求提供，学生可以用其它成绩来代替，在申请大学时需要仔细查阅该校的入学条件。</p>
+                                <a class="more_btn" href="#">Read More</a>
+                            </div>
+                        </div>
+                        <div class="blog_main_item">
+                            <div class="blog_img">
+                                <img class="img-fluid" src="img/blog/blog-3.jpg" alt="">
+                                <div class="blog_date">
+                                    <h5>SAT</h5>
+                                </div>
+                            </div>
+                            <div class="blog_text">
+                                <h4>SAT ( Scholastic Assessment Test )</h4>
+                                <div class="blog_author">
+                                </div>
+                                <p></p>
+                                <a class="more_btn" href="#">Read More</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <nav aria-label="Page navigation example" class="pagination_area">
-                    <ul class="pagination">
-                        <li class="page-item active"><a class="page-link" href="#">01.</a></li>
-                        <li class="page-item"><a class="page-link" href="#">02.</a></li>
-                        <li class="page-item"><a class="page-link" href="#">03.</a></li>
-                        <li class="page-item"><a class="page-link" href="#">04.</a></li>
-                    </ul>
-                </nav>
             </div>
         </section>
         <!--================End Blog Main Area =================-->
