--- a/UBWebsite/single-blog.html
+++ b/UBWebsite/single-blog.html
@@ -34,19 +34,22 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">首页</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about-us.html">关于我们</a></li>
                         <li class="nav-item dropdown submenu active">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Blog
+                            课程内容
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                                <li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog.html">IGCSE课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="single-blog.html">Alevel课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="elements.html">IB课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="">AP课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="">SAT 课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="">国际竞赛课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="">小语种语言培训</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </nav>
@@ -57,8 +60,7 @@
         <section class="banner_area">
             <div class="container">
                 <div class="banner_inner_text">
-                    <h2>Blog</h2>
-                    <p>Read the news</p>
+                    <h2>课程内容介绍</h2>
                 </div>
             </div>
         </section>
