--- a/UBWebsite/about-us.html
+++ b/UBWebsite/about-us.html
@@ -40,13 +40,13 @@
                             课程内容
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="nav-item"><a class="nav-link" href="blog.html">IGCSE课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-blog.html">Alevel课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="elements.html">IB课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="">AP课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="">SAT 课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="">国际竞赛课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="">小语种语言培训</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog.html#IGCSE">IGCSE课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog.html#A-level">Alevel课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog.html#IB">IB课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog.html#AP">AP课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog.html#SAT">SAT 课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="single-blog.html">国际竞赛课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="elements.html">小语种语言培训</a></li>
                             </ul>
                         </li>
                     </ul>
