--- a/UBWebsite/blog.html
+++ b/UBWebsite/blog.html
@@ -46,8 +46,8 @@
                                 <li class="nav-item"><a class="nav-link" href="#IB">IB课程</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#AP">AP课程</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#SAT">SAT 课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-blog.html">国际竞赛课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="elements.html">小语种语言培训</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#competition">国际竞赛课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#language">小语种语言培训</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -114,13 +114,13 @@
                                 <div class="blog_author">
                                 </div>
                                 <p>IB课程即国际文凭组织IBO（International Baccalaureate Organization），是为全球学生开设从幼儿园到大学预科的课程，为3-19岁的学生提供智力，情感，个人发展，社会技能等方面的教育，使其获得学习，工作以及生存于世的各项能力。
-                                    IBO成立于1968年，迄今为止遍布138个国家与2815个学校合作，学生数量超过77万。与A-Level、VCE、AP等课程并称全球四大高中课程体系</p>
+                                    IBO成立于1968年，迄今为止遍布138个国家与2815个学校合作，学生数量超过77万。与A-Level、VCE、AP等课程并称全球四大高中课程体系。</p>
                                 <a class="more_btn" href="#">Read More</a>
                             </div>
                         </div>
                         <div class="blog_main_item" id="AP">
                             <div class="blog_img">
-                                <img class="img-fluid" src="img/blog/blog-3.jpg" alt="">
+                                <img class="img-fluid" src="img/blog/blog-4.jpg" alt="">
                                 <div class="blog_date">
                                     <h5>AP</h5>
                                 </div>
@@ -135,7 +135,7 @@
                         </div>
                         <div class="blog_main_item" id="SAT">
                             <div class="blog_img">
-                                <img class="img-fluid" src="img/blog/blog-3.jpg" alt="">
+                                <img class="img-fluid" src="img/blog/blog-5.jpg" alt="">
                                 <div class="blog_date">
                                     <h5>SAT</h5>
                                 </div>
@@ -149,15 +149,33 @@
                                 <a class="more_btn" href="#">Read More</a>
                             </div>
                         </div>
-                        <div class="blog_main_item">
+                        <div class="blog_main_item" id="competition">
                             <div class="blog_img">
-                                <img class="img-fluid" src="img/blog/blog-3.jpg" alt="">
+                                <img class="img-fluid" src="img/blog/blog-6.jpg" alt="">
                                 <div class="blog_date">
-                                    <h5>SAT</h5>
+                                    <h5>国际竞赛</h5>
                                 </div>
                             </div>
                             <div class="blog_text">
-                                <h4>SAT ( Scholastic Assessment Test )</h4>
+                                <h4>国际竞赛课程</h4>
+                                <div class="blog_author">
+                                </div>
+                                <p>剑桥STEP:（Sixth Term Examination Paper）由Cambridge Assessment下属的Admissions Testing Service组织，是申请剑桥大学、华威大学等数学类本科专业时必须提供的数学附加考试。除了以上两所学校以外，还有很多学校的数学专业没有要求必须提供STEP的成绩，但会将此成绩作为加分项，比如巴斯大学、布里斯托大学、帝国理工大学等。</p>
+                                <p>牛津MAT：MAT全称是Mathematics Admissions Test，是牛津大学数学系（数学专业，计算机专业）选拨学生的入学考试。MAT考试时间为2个小时30分，考试内容主要是集中在纯数学部分（CIE 的Pure math或者Edexcel 的C1、C2模块）。</p>
+                                <p>物理碗：（PhysicsBowl）是针对高中生和参与学校的比赛。一般在每年四月，学生在考点通过回答高中物理课程中的40个选择题来竞争。该竞赛由各大美国名校的物理教授以及经验丰富的物理教师进行出题和审核，内容涉及力学、电磁学等所有高中物理各大模块。</p>
+                                <p>AMC：（American Mathematics Competition）美国数学竞赛的缩写，由美国数学协会于1950年成立。AMC不但是美国顶尖数学人才的人才库，更为学校提供了解申请入学者在数学科目上的学习成就与表现评估。多年来，AMC还扮演为美国培育世界数学奥林匹克（IMO）选手的重大责任。</p>
+                                <a class="more_btn" href="#">Read More</a>
+                            </div>
+                        </div>
+                        <div class="blog_main_item" id="language">
+                            <div class="blog_img">
+                                <img class="img-fluid" src="img/blog/blog-7.jpg" alt="">
+                                <div class="blog_date">
+                                    <h5>语言</h5>
+                                </div>
+                            </div>
+                            <div class="blog_text">
+                                <h4>小语种语言培训</h4>
                                 <div class="blog_author">
                                 </div>
                                 <p></p>
