--- a/UBWebsite/blog.html
+++ b/UBWebsite/blog.html
@@ -178,7 +178,10 @@
                                 <h4>小语种语言培训</h4>
                                 <div class="blog_author">
                                 </div>
-                                <p></p>
+                                <p>法语</p>
+                                <p>西班牙语</p>
+                                <p>德语</p>
+                                <p>日语</p>
                                 <a class="more_btn" href="#">Read More</a>
                             </div>
                         </div>
