--- a/UBWebsite/blog.html
+++ b/UBWebsite/blog.html
@@ -178,10 +178,9 @@
                                 <h4>小语种语言培训</h4>
                                 <div class="blog_author">
                                 </div>
-                                <p>法语</p>
-                                <p>西班牙语</p>
-                                <p>德语</p>
-                                <p>日语</p>
+                                <p>SuperNova小语种课程经过专业教师团队精心设计打造，参考《欧洲语言通用框架性标准》，采用科学、严谨的方式分级和编排，致力于使学员在合理的时间内从0基础学到精通。</p>
+                                <p>SuperNova小语种课程包括法语、西班牙语、德语、日语等热门小语种，通过专业语音学教师的标准示范及对大量例词、例句的反复训练，练就地道发音。</p>
+                                
                                 <a class="more_btn" href="#">Read More</a>
                             </div>
                         </div>
