--- a/UBWebsite/index.html
+++ b/UBWebsite/index.html
@@ -46,8 +46,8 @@
                                 <li class="nav-item"><a class="nav-link" href="blog.html#IB">IB课程</a></li>
                                 <li class="nav-item"><a class="nav-link" href="blog.html#AP">AP课程</a></li>
                                 <li class="nav-item"><a class="nav-link" href="blog.html#SAT">SAT 课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-blog.html">国际竞赛课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="elements.html">小语种语言培训</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog.html#competition">国际竞赛课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog.html#language">小语种语言培训</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -85,7 +85,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-1.png" alt="">
+                                <img src="img/icon/icon-1.png" alt="">
                             </div>
                             <h4>Brand / IGCSE Computer</h4>
                             <p>因为我的基础有点薄弱，课堂上听老师讲课有点跟不上。自从跟着Eli老师学习之后，老师会将我不懂的模块拆分成小点，一一讲清楚之后串联起来。我的IGCSE成绩有了显著的提高。</p>
@@ -94,7 +94,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-2.png" alt="">
+                                <img src="img/icon/icon-2.png" alt="">
                             </div>
                             <h4>Cedar / IB英语</h4>
                             <p>英语一直是我的弱项，但是想申报国际学校必须要学习。老师除了英语基础之外，会给我布置一些有趣的英文阅读任务，拓宽知识面的同时学习了英语，对我的帮助很大。</p>
@@ -103,7 +103,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-3.png" alt="">
+                                <img src="img/icon/icon-3.png" alt="">
                             </div>
                             <h4>Social Media</h4>
                             <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
