--- a/UBWebsite/about-us.html
+++ b/UBWebsite/about-us.html
@@ -45,8 +45,8 @@
                                 <li class="nav-item"><a class="nav-link" href="blog.html#IB">IB课程</a></li>
                                 <li class="nav-item"><a class="nav-link" href="blog.html#AP">AP课程</a></li>
                                 <li class="nav-item"><a class="nav-link" href="blog.html#SAT">SAT 课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-blog.html">国际竞赛课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="elements.html">小语种语言培训</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog.html#competition">国际竞赛课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog.html#language">小语种语言培训</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -209,9 +209,9 @@
                             <div class="l_title">
                                 <img src="img/icon/title-icon.png" alt="">
                                 <h6>我们的优势</h6>
-                                <h2>We are a <span>Gibraltar</span> based Company</h2>
+                                <h2>We put the interests of the <span>students first</span></h2>
                             </div>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul.Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum. Nam convallis vel erat id dictum. Sed ut risus in orci convallis viverra a eget nisi. Aenean pellentesque elit vitae eros dignissim ultrices. </p>
+                            <p></p>
                         </div>
                     </div>
                     <div class="col-lg-6">
